--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,6 @@
     <string name="to_do">This is your all due task that you want to do !!</string>
     <string name="a" />
     <string name="number_of_your_task">Please just put the number of your task</string>
-    <string name="discriptionForChangeing">And you can Change the status of your tasks ,So when you finish a task you can make its done and removing the task from the due task list, great!!!</string>
+    <string name="discriptionForChangeing">And you can Change the status of your tasks ,So when you finish a task you can make its done and removing the task from the due task list</string>
     <string name="make_it_done">Change to Done !</string>
 </resources>
